chore: fix typo and add description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="author" content="Alex Ding" />
     <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="Alex Ding's website and online portfolio">
     <link rel="icon" type="image/svg+xml" href="/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alex Ding</title>
