--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="Alex Ding" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="Alex Ding is software engineer studying Computer Science at Brown University. Intern at Google and Bloomberg.">
-    <link rel="icon" type="image/svg+xml" href="/assets/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alex Ding</title>
-    <script>
-      (function() {
-        const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
-        const setting = localStorage.getItem('ading-color-scheme') || 'auto'
-        if (setting === 'dark' || (prefersDark && setting !== 'light')) document.documentElement.classList.toggle('dark', true)
-      })()
-    </script>
-  </head>
-  <body class="font-sans">
-    <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="author" content="Alex Ding" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="description"
+    content="Alex Ding is software engineer studying Computer Science at Brown University. Intern at Jane Street, Google, and Bloomberg.">
+  <link rel="icon" type="image/svg+xml" href="/assets/logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Alex Ding</title>
+  <script>
+    (function () {
+      const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
+      const setting = localStorage.getItem('ading-color-scheme') || 'auto'
+      if (setting === 'dark' || (prefersDark && setting !== 'light')) document.documentElement.classList.toggle('dark', true)
+    })()
+  </script>
+</head>
+
+<body class="font-sans">
+  <div id="app"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
