--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Alex Ding" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="description"
-    content="Alex Ding is software engineer studying Computer Science at Brown University. Intern at Jane Street, Google, and Bloomberg.">
+    content="Alex Ding is a software engineer studying Computer Science at Brown University. Intern at Jane Street, Google, and Bloomberg.">
   <link rel="icon" type="image/svg+xml" href="/assets/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alex Ding</title>
